--- a/parkweb-gateway_zuul/src/main/resources/application.properties
+++ b/parkweb-gateway_zuul/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8765
 
 #Configuration Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Configuration Microservices
+zuul.routes.ms-categories.service-id=ms-categories
+zuul.routes.ms-categories.path=/ms-categories/**
