Implementation endpoints ms-products

--- a/parkweb-gateway_zuul/src/main/resources/application.properties
+++ b/parkweb-gateway_zuul/src/main/resources/application.properties
@@ -7,3 +7,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #Configuration Microservices
 zuul.routes.ms-categories.service-id=ms-categories
 zuul.routes.ms-categories.path=/ms-categories/**
+
+zuul.routes.ms-products.service-id=ms-products
+zuul.routes.ms-products.path=/ms-products/**
