Implementation endpoints ms-clients

--- a/parkweb-gateway_zuul/src/main/resources/application.properties
+++ b/parkweb-gateway_zuul/src/main/resources/application.properties
@@ -10,3 +10,6 @@ zuul.routes.ms-categories.path=/ms-categories/**
 
 zuul.routes.ms-products.service-id=ms-products
 zuul.routes.ms-products.path=/ms-products/**
+
+zuul.routes.ms-clients.service-id=ms-clients
+zuul.routes.ms-clients.path=/ms-clients/**
