parkweb-ms_users

--- a/parkweb-gateway_zuul/src/main/resources/application.properties
+++ b/parkweb-gateway_zuul/src/main/resources/application.properties
@@ -13,3 +13,6 @@ zuul.routes.ms-products.path=/ms-products/**
 
 zuul.routes.ms-clients.service-id=ms-clients
 zuul.routes.ms-clients.path=/ms-clients/**
+
+zuul.routes.ms-users.service-id=ms-users
+zuul.routes.ms-users.path=/ms-users/**
