Authentication and Autthorization Oauth with Jwt

--- a/parkweb-gateway_zuul/src/main/resources/application.properties
+++ b/parkweb-gateway_zuul/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8765
 #Configuration Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+#Configuring TimeOut Ribbon Client(Eureka)
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
 #Configuration Microservices
 zuul.routes.ms-categories.service-id=ms-categories
 zuul.routes.ms-categories.path=/ms-categories/**
@@ -16,3 +21,8 @@ zuul.routes.ms-clients.path=/ms-clients/**
 
 zuul.routes.ms-users.service-id=ms-users
 zuul.routes.ms-users.path=/ms-users/**
+
+zuul.routes.ms-oauth.service-id=ms-oauth
+zuul.routes.ms-oauth.path=/ms-oauth/**
+
+zuul.routes.ms-oauth.sensitive-headers=Cookie,Set-Cookie	
