--- a/parkweb-ms_oauth/src/main/resources/application.properties
+++ b/parkweb-ms_oauth/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ms-users
+spring.application.name=ms-oauth
 server.port=${PORT:0}
 
 #Configuration name and door random Eureka
