--- a/parkweb-ms_users/src/main/resources/bootstrap.properties
+++ b/parkweb-ms_users/src/main/resources/bootstrap.properties
@@ -1,9 +1,9 @@
 spring.application.name=ms-users
 
-#Configuration name and door random 
+#Configuration Location Server
 spring.cloud.config.uri=http://localhost:8888
 
-#Configuration Profile
+#Configuration Profiles
 spring.profiles.active=test
 
 #Configuration Updates Runtime
